<resources>
    <string name="app_name">HackMe</string>
    <string name="title_activity_main_map">Map</string>
    <string name="messaging">Messaging</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="title_activity_maps">Map</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billy_baxton">Billy Baxton</string>
    <string name="current_location">Current location</string>
    <string name="additional_info">Additional info</string>
    <string name="set_safety_area">Set safety area</string>
    <string name="set_schedule">Set schedule</string>
    <string name="make_phone_ring">Make phone ring</string>
    <string name="emergency">Emergency</string>
    <string name="title_activity_set_area">Map</string>
</resources>